force-app/main/default/objects/Practice__c/Practice__c.object-meta.xml
<CustomObject>
    <label>Practice</label>
    <nameField>
        <label>Practice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Practices</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>