force-app/main/default/objects/Practice__c/fields/Group_Practice__c.field-meta.xml
<CustomField>
    <fullName>Group_Practice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group Practice</label>
    <referenceTo>Practice__c</referenceTo>
    <relationshipLabel>Practices</relationshipLabel>
    <relationshipName>Practices</relationshipName>
    <type>Lookup</type>
</CustomField>