force-app/main/default/objects/Practice__c/fields/In_Network__c.field-meta.xml
<CustomField>
    <fullName>In_Network__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Network</label>
    <type>Checkbox</type>
</CustomField>