force-app/main/default/objects/Practice__c/recordTypes/Single_Office.recordType-meta.xml
<RecordType>
    <fullName>Single_Office</fullName>
    <active>true</active>
    <label>Single Office</label>
</RecordType>