force-app/main/default/objects/Practice__c/validationRules/StateCode.validationRule-meta.xml
<ValidationRule>
    <fullName>StateCode</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( State__c ) &lt;&gt; 2 &amp;&amp; NOT(CONTAINS(&quot;AL:AK:AZ:AR:CA:CO:CT:DE:FL:GA:HI:ID:IL:IN:IA:KS:KY:LA:ME:MD:MA:MI:MN:MS:MO:MT:NE:NV:NH:NJ:NM:NY:NC:ND:OH:OK:OR:PA:RI:SC:SD:TN:TX:UT:VT:VA:WA:WV:WI:WY:DC:FM:GU:MH:MP:PW:PR:VI&quot;, State__c))</errorConditionFormula>
    <errorMessage>Please enter a valid 2-letter state code.</errorMessage>
</ValidationRule>